# okssystem

./: CMakeLists.txt  NOTICE
cmt/: requirements
doc/: RELEASE_NOTES.tdaq-01-06-00.html  RELEASE_NOTES.tdaq-01-07-00.html  RELEASE_NOTES.tdaq-01-08-00.html  RELEASE_NOTES.tdaq-01-08-03.html  RELEASE_NOTES.tdaq-01-09-00.html  RELEASE_NOTES.tdaq-02-00-01.html
include/okssystem/: Descriptor.hpp  Environment.hpp  Executable.hpp  FIFOConnection.hpp  File.hpp  Host.hpp  MapFile.hpp  OksSystem.hpp  Path.hpp  Process.hpp  StringMemoryArea.hpp  User.hpp  exceptions.hpp
include/system/: Environment.hpp  Executable.hpp  File.hpp  Host.hpp  MapFile.hpp  exceptions.hpp
src/: Descriptor.cpp  Descriptor.cxx  Environment.cpp  Executable.cpp  Executable.cxx  FIFOConnection.cpp  File.cpp  Host.cpp  MapFile.cpp  Path.cpp  Path.cxx  Process.cpp  StringMemoryArea.cpp  User.cpp  User.cxx
system/: Descriptor.h  Executable.h  FIFOConnection.h  File.h  Path.h  Process.h  StringMemoryArea.h  System.h  User.h  exceptions.h
test/apps/: OksSystemTest.cxx  OksSystemTest.hpp  SystemTest.cxx
